--- a/Day 30/Level 1/style.css
+++ b/Day 30/Level 1/style.css
@@ -4,6 +4,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    cursor: pointer;
+    user-select: none;
 }
 
 .heading_container{
@@ -126,7 +128,7 @@
 .graph,
 .country_lang_graph {
     height: 30px;
-    background-color: #f2a93b;
+    background-color: #8ad5f0;
 }
 
 .value,
@@ -143,7 +145,7 @@
 }
 
 button {
-    background-color: #f2a93b;
+    background-color: #f6a6bf;
     width: 150px;
     height: 25px;
     border-radius: 4px;
